# emojiclip

./: .gitignore  README.md  meson.build
data/: Application.css  emojiclip.appdata.xml  emojiclip.desktop  gresource.xml  meson.build
po/: POTFILES  com.github.leggettc18.emojiclip.pot  de.po  es.po
src/: Application.vala
